--- a/finalProject/src/main/resources/templates/index.html
+++ b/finalProject/src/main/resources/templates/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Index</title>
-</head>
-<body>
-	<h1>TEST중입니다.</h1>
-	<h1>TEST중입니다2.</h1>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><script src=https://kit.fontawesome.com/9eb162ac0d.js crossorigin=anonymous></script><link href=https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css rel=stylesheet integrity=sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3 crossorigin=anonymous><script src=https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js integrity=sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p crossorigin=anonymous></script><title>vue_page</title><link href=/static/css/app.f9fc56e68c93ac0a621ae30b46cd0290.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.af7fed63907eb6255ce2.js></script><script type=text/javascript src=/static/css/app.f9fc56e68c93ac0a621ae30b46cd0290.css></script></body></html>
